flink dependencies changes